feat(llecoop/product/detail): #623 add cdn with image-kit for product imgs

--- a/apps/llecoop/src/styles/styles.scss
+++ b/apps/llecoop/src/styles/styles.scss
@@ -176,10 +176,10 @@
     )
   );
 
-  @include mat.progress-bar-overrides(
+  @include mat.progress-spinner-overrides(
     (
       active-indicator-color: var(--mat-sys-inverse-primary),
-      track-color: var(--mat-sys-inverse-on-surface),
+      size: 40px,
     )
   );
 }
