--- a/libs/shared/form/ui/img-loader/src/lib/input-img-loader/input-img-loader-type.component.html
+++ b/libs/shared/form/ui/img-loader/src/lib/input-img-loader/input-img-loader-type.component.html
@@ -1,7 +1,5 @@
 <div class="loader-file-container">
-  @if (to.label) {
-    <label for="">{{ to.label }}<span [hidden]="!to.required"> *</span></label>
-  }
+  <label for="">{{ props.label }}<span [hidden]="!props.required"> *</span></label>
 
   <plastik-input-img-loader
     [formControl]="formControl"
@@ -11,8 +9,18 @@
     [fileUrl]="props.fileUrl?.() || null"
     [title]="props.title?.() || ''"
     [folder]="props.folder?.() || ''"
-    [maxSize]="props.maxSize?.() || 1000000"
+    [maxSize]="props.maxSize?.() ?? maxSize"
+    [minHeight]="props.minHeight?.() ?? minHeight"
+    [minWidth]="props.minWidth?.() ?? minWidth"
     [cdnUrl]="props.cdnUrl?.() || null"></plastik-input-img-loader>
+</div>
+
+<div class="flex flex-col gap-0 md:flex-row md:gap-sub">
+  <mat-hint class="text-sm">Pes màxim: {{ props.maxSize?.() ?? maxSize }} MB</mat-hint>
+  <mat-hint class="text-sm"
+    >Dimensions mínimes: {{ props.minHeight?.() ?? minHeight }} x
+    {{ props.minWidth?.() ?? minWidth }} px</mat-hint
+  >
 </div>
 
 @if (formControl.errors && formControl.touched && !formControl.pristine) {
