--- a/libs/shared/form/ui/textarea-with-counter/src/lib/textarea-with-counter-type.component.html
+++ b/libs/shared/form/ui/textarea-with-counter/src/lib/textarea-with-counter-type.component.html
@@ -13,7 +13,7 @@
     [maxLength]="props.maxLength"
     [minLength]="props.minLength"
     [cdkAutosizeMaxRows]="to['maxRows']"></textarea>
-  <mat-hint class="mt-3 mb-3 text-sm" [ngClass]="{ 'text-error': ta.value.length >= ta.maxLength }"
+  <mat-hint class="text-sm" [ngClass]="{ 'text-error': ta.value.length >= ta.maxLength }"
     >{{ ta.value.length }} / {{ props.maxLength }} caràcters</mat-hint
   >
 </mat-form-field>
