--- a/libs/shared/form/ui/img-loader/src/lib/input-img-loader/input-img-loader-type.component.html
+++ b/libs/shared/form/ui/img-loader/src/lib/input-img-loader/input-img-loader-type.component.html
@@ -1,22 +1,20 @@
-<div class="loader-file-container">
-  <label for="">{{ props.label }}<span [hidden]="!props.required"> *</span></label>
+<label for="">{{ props.label }}<span [hidden]="!props.required"> *</span></label>
 
-  <plastik-input-img-loader
-    [formControl]="formControl"
-    [formlyAttributes]="field"
-    [progress]="props.progress?.() || 0"
-    [upload]="props.upload"
-    [fileUrl]="props.fileUrl?.() || null"
-    [title]="props.title?.() || ''"
-    [folder]="props.folder?.() || ''"
-    [maxSize]="props.maxSize?.() ?? maxSize"
-    [minHeight]="props.minHeight?.() ?? minHeight"
-    [minWidth]="props.minWidth?.() ?? minWidth"
-    [cdnUrl]="props.cdnUrl?.() || null"></plastik-input-img-loader>
-</div>
+<plastik-input-img-loader
+  [formControl]="formControl"
+  [formlyAttributes]="field"
+  [progress]="props.progress?.() || 0"
+  [upload]="props.upload"
+  [fileUrl]="props.fileUrl?.() || null"
+  [title]="props.title?.() || ''"
+  [folder]="props.folder?.() || ''"
+  [maxSize]="props.maxSize?.() ?? maxSize"
+  [minHeight]="props.minHeight?.() ?? minHeight"
+  [minWidth]="props.minWidth?.() ?? minWidth"
+  [cdnUrl]="props.cdnUrl?.() || null"></plastik-input-img-loader>
 
-<div class="flex flex-col gap-0 md:flex-row md:gap-sub">
-  <mat-hint class="text-sm">Pes màxim: {{ props.maxSize?.() ?? maxSize }} MB</mat-hint>
+<div class="flex flex-col gap-0 md:flex-row md:gap-sub mt-tiny">
+  <mat-hint class="text-sm">Pes màxim: {{ props.maxSize?.() ?? maxSize | bytesToSize }}</mat-hint>
   <mat-hint class="text-sm"
     >Dimensions mínimes: {{ props.minHeight?.() ?? minHeight }} x
     {{ props.minWidth?.() ?? minWidth }} px</mat-hint
