perf(shared/form/img-loader): #623 add image container dynamic dimensions

--- a/libs/shared/form/ui/img-loader/src/lib/input-img-loader/input-img-loader-type.component.html
+++ b/libs/shared/form/ui/img-loader/src/lib/input-img-loader/input-img-loader-type.component.html
@@ -11,6 +11,8 @@
   [maxSize]="props.maxSize?.() ?? maxSize"
   [minHeight]="props.minHeight?.() ?? minHeight"
   [minWidth]="props.minWidth?.() ?? minWidth"
+  [imgHeight]="props.imgHeight?.() ?? imgHeight"
+  [imgWidth]="props.imgWidth?.() ?? imgWidth"
   [cdnUrl]="props.cdnUrl?.() || null"></plastik-input-img-loader>
 
 <div class="flex flex-col gap-0 md:flex-row md:gap-sub mt-tiny">
