--- a/libs/shared/form/ui/img-loader/src/lib/input-img-loader/input-img-loader-type.component.html
+++ b/libs/shared/form/ui/img-loader/src/lib/input-img-loader/input-img-loader-type.component.html
@@ -13,7 +13,8 @@
   [minWidth]="props.minWidth?.() ?? minWidth"
   [imgHeight]="props.imgHeight?.() ?? imgHeight"
   [imgWidth]="props.imgWidth?.() ?? imgWidth"
-  [cdnUrl]="props.cdnUrl?.() || null"></plastik-input-img-loader>
+  [cdnUrl]="props.cdnUrl?.()"
+  [lcpImage]="props.lcpImage?.() ?? lcpImage"></plastik-input-img-loader>
 
 <div class="flex flex-col gap-0 md:flex-row md:gap-sub mt-tiny">
   <mat-hint class="text-sm">Pes màxim: {{ props.maxSize?.() ?? maxSize | bytesToSize }}</mat-hint>
