feat(llecoop/product/list): #623 add product image to products table list

--- a/apps/llecoop/src/styles/styles.scss
+++ b/apps/llecoop/src/styles/styles.scss
@@ -2,6 +2,7 @@
 @use 'styles_theme-colors' as palette;
 @use 'theme';
 @use 'loading';
+@use 'core_styles_util_material';
 
 @tailwind base;
 @tailwind components;
@@ -34,14 +35,12 @@
         density: 0,
       )
     );
-
-    @apply box-border;
   }
 
   *,
   *:before,
   *:after {
-    box-sizing: inherit;
+    @apply box-border;
   }
 
   body {
