feat: #623 add delete img from product cloud function
ISSUES CLOSED: #623

--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -53,6 +53,7 @@
   [noPagination]="tableDefinition.noPagination || false"
   [extraRowStyles]="tableDefinition.extraRowStyles"
   [actionsColStyles]="tableDefinition.actionsColStyles || ''"
+  [rowHeight]="tableDefinition.rowHeight"
   (changeSorting)="onChangeSorting($event)"
   (changePagination)="onChangePagination($event)"
   (delete)="onDelete($event)">
