perf(llecoop): #578 improve description of table buttons in list pages
ISSUES CLOSED: #578

--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -29,7 +29,8 @@
       mat-flat-button
       [disabled]="routingToDetailPage.disabled"
       [routerLink]="routingToDetailPage.path || ['./crear']">
-      <mat-icon>add</mat-icon> {{ routingToDetailPage.label || 'Crear' }}
+      <mat-icon>{{ routingToDetailPage.icon || 'add' }}</mat-icon>
+      {{ routingToDetailPage.label || 'Crear' }}
     </button>
   }
 </div>
