perf(llecoop): #604 fix several a11y tips
add also a skip link component util

--- a/apps/llecoop/src/app/app.component.html
+++ b/apps/llecoop/src/app/app.component.html
@@ -15,4 +15,6 @@
     (sendDismiss)="notificationStore.dismiss()"></div>
 }
 
+<plastik-skip-link></plastik-skip-link>
+
 <router-outlet></router-outlet>
