--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -158,7 +158,7 @@
 <ng-template #toggleSidenavButtonTpl>
   <button
     mat-icon-button
-    aria-label="sidenav toggle button"
+    aria-label="menú lateral"
     class="flex justify-center align-middle"
     data-test="toggle-sidenav-button"
     (click)="onToggleSidenav()">
