--- a/libs/shared/form/util/src/addons-wrapper/formly-addons-wrapper.component.scss
+++ b/libs/shared/form/util/src/addons-wrapper/formly-addons-wrapper.component.scss
@@ -3,9 +3,9 @@
 }
 
 .mat-mdc-form-field-icon-suffix {
-  @apply pr-sm;
+  @apply pr-tiny;
 }
 
 .mat-mdc-form-field-icon-prefix {
-  @apply pl-sm;
+  @apply pl-tiny;
 }
