--- a/apps/llecoop/src/styles/styles.scss
+++ b/apps/llecoop/src/styles/styles.scss
@@ -112,6 +112,11 @@
     }
   }
 
+  :focus-visible {
+    outline: 2px solid rgb(191, 9, 9) !important;
+    outline-offset: -2px !important;
+  }
+
   plastik-shared-activity-ui-overlay .overlay-container {
     z-index: 9999;
   }
