--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -15,6 +15,7 @@
       <ng-container [matColumnDef]="column.key" [sticky]="column.sticky">
         <mat-header-cell
           *matHeaderCellDef
+          [sortActionDescription]="column.sorting ? `Ordenar per ${column.title}` : ''"
           [mat-sort-header]="column.sorting || ''"
           [disabled]="!column.sorting"
           [ngClass]="column.cssClasses?.[0] || ''">
