--- a/libs/llecoop/order-list/feature/list/src/lib/order-list-feature-list.component/llecoop-order-list-feature-list.component.html
+++ b/libs/llecoop/order-list/feature/list/src/lib/order-list-feature-list.component/llecoop-order-list-feature-list.component.html
@@ -13,7 +13,7 @@
     @for (action of viewExtraActions; track action) {
       <button
         type="button"
-        mat-flat-button
+        mat-stroked-button
         [disabled]="action.disabled()"
         (click)="action.execute()">
         <mat-icon>{{ action.icon }}</mat-icon> {{ action.label }}
