--- a/libs/llecoop/order-list/feature/order-list-user-order/src/lib/order-list-user-order-feature-list.component.html
+++ b/libs/llecoop/order-list/feature/order-list-user-order/src/lib/order-list-user-order-feature-list.component.html
@@ -9,7 +9,11 @@
   </h2>
 
   <div class="flex flex-row justify-end items-center gap-sm">
-    <button type="button" mat-flat-button color="primary" [routerLink]="['/comandes', 'setmanals']">
+    <button
+      type="button"
+      mat-stroked-button
+      color="primary"
+      [routerLink]="['/comandes', 'setmanals']">
       <mat-icon>date_range</mat-icon> Veure ell llistat de comandes per setmanes
     </button>
   </div>
