--- a/libs/shared/form/ui/img-loader/src/lib/input-img-loader/input-img-loader.component.html
+++ b/libs/shared/form/ui/img-loader/src/lib/input-img-loader/input-img-loader.component.html
@@ -43,7 +43,7 @@
       <span class="text-sm text-center text-balance">o</span>
       <button
         type="button"
-        mat-flat-button
+        mat-button
         class="w-full sm:w-auto"
         [disabled]="disabled()"
         (click)="inputFile.click()"
