--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -14,7 +14,7 @@
       @for (action of viewExtraActions; track action) {
         <button
           type="button"
-          mat-flat-button
+          mat-stroked-button
           [disabled]="action.disabled()"
           (click)="action.execute()">
           <mat-icon>{{ action.icon }}</mat-icon> {{ action.label }}
@@ -26,7 +26,7 @@
   @if (routingToDetailPage.visible) {
     <button
       type="button"
-      mat-flat-button
+      mat-stroked-button
       [disabled]="routingToDetailPage.disabled"
       [routerLink]="routingToDetailPage.path || ['./crear']">
       <mat-icon>{{ routingToDetailPage.icon || 'add' }}</mat-icon>
