--- a/libs/llecoop/order-list/feature/user-order-resume/src/lib/llecoop-user-order-feature-resume/user-order-feature-resume.component.html
+++ b/libs/llecoop/order-list/feature/user-order-resume/src/lib/llecoop-user-order-feature-resume/user-order-feature-resume.component.html
@@ -11,7 +11,7 @@
   </h2>
 
   <div class="flex flex-col items-center sm:flex-row sm:justify-end gap-tiny">
-    <button type="button" mat-flat-button [routerLink]="['/comandes', 'totes']">
+    <button type="button" mat-stroked-button [routerLink]="['/comandes', 'totes']">
       <mat-icon>arrow_back</mat-icon> Tornar al llistat
     </button>
   </div>
