--- a/libs/shared/activity/ui/src/lib/shared-activity-ui-overlay/shared-activity-ui-overlay.component.html
+++ b/libs/shared/activity/ui/src/lib/shared-activity-ui-overlay/shared-activity-ui-overlay.component.html
@@ -1,3 +1,3 @@
-<div class="overlay-container absolute [ flex items-center justify-center ] [ w-full h-full ]">
+<div class="z-50 absolute [ flex items-center justify-center ] [ w-full h-full ] bg-white/40">
   <ng-content></ng-content>
 </div>
